--- a/src/components/Bank/BankDrawer.css
+++ b/src/components/Bank/BankDrawer.css
@@ -1,32 +1,15 @@
 .navbar {
-    background-color: #F4B004 !important; /* amber rgb(244,176,4) */
+    background-color: #F4B004 !important;
     z-index: 10001;
 }
 
-.navbar h1 {
-    color: #0F2E53 !important; /* navy rgb(15,46,83) */
-}
+.navbar h1 { color: #0F2E53 !important; }
 
-.navbar svg {
-    fill: rgba(15,46,83,0.45) !important;
-}
+.navbar svg { fill: rgba(15,46,83,0.45) !important; }
 
-.menu-item {
-    color: rgba(244,176,4,0.5);
-}
+.menu-item { color: rgba(244,176,4,0.5); }
 
-a {
-    text-decoration: none;
-}
-
-a.active {
-    color: rgba(244,176,4,0.9);
-    font-weight: bold;
-}
-
-.menu-item:hover {
-    background-color: rgba(244,176,4,0.15);
-}
+.menu-item:hover { background-color: rgba(244,176,4,0.15); }
 
 .menu-item {
     display: block;
@@ -36,12 +19,4 @@ a.active {
     padding-left: 10px;
 }
 
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.account-home-domain {
-    font-variant: small-caps;
-}
+.account-home-domain { font-variant: small-caps; }
