--- a/src/components/LoadingModal/index.css
+++ b/src/components/LoadingModal/index.css
@@ -54,6 +54,4 @@
     justify-content: center;
 }
 
-.material-icons.badge {
-    font-size: 2.45rem !important;
-}
+.material-icons.badge { font-size: 2.45rem !important; }
