--- a/src/components/StellarFox/index.css
+++ b/src/components/StellarFox/index.css
@@ -1,47 +1,34 @@
 @font-face {
-    font-family: 'Roboto';
+    font-family: "Material Icons";
     font-style: normal;
     font-weight: 400;
-    src: url('./fonts/roboto/roboto-v18-latin-regular.eot');
-    src: local('Roboto'), local('Roboto-Regular'),
-        url('./fonts/roboto/roboto-v18-latin-regular.eot?#iefix') format('embedded-opentype'),
-        url('./fonts/roboto/roboto-v18-latin-regular.woff2') format('woff2'),
-        url('./fonts/roboto/roboto-v18-latin-regular.woff') format('woff'),
-        url('./fonts/roboto/roboto-v18-latin-regular.ttf') format('truetype'),
-        url('./fonts/roboto/roboto-v18-latin-regular.svg#Roboto') format('svg');
+    src: url("./fonts/iconfont/MaterialIcons-Regular.eot");
+    src: local("Material Icons"),
+        local("MaterialIcons-Regular"),
+        url("./fonts/iconfont/MaterialIcons-Regular.woff2") format("woff2"),
+        url("./fonts/iconfont/MaterialIcons-Regular.woff") format("woff"),
+        url("./fonts/iconfont/MaterialIcons-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Material Icons';
+    font-family: "Ledger Font";
     font-style: normal;
     font-weight: 400;
-    src: url('./fonts/iconfont/MaterialIcons-Regular.eot');
-    src: local('Material Icons'),
-        local('MaterialIcons-Regular'),
-        url('./fonts/iconfont/MaterialIcons-Regular.woff2') format('woff2'),
-        url('./fonts/iconfont/MaterialIcons-Regular.woff') format('woff'),
-        url('./fonts/iconfont/MaterialIcons-Regular.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'Ledger Font';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Ledger Font'),
-        url('./fonts/ledger/ledger-font.ttf') format('truetype');
+    src: local("Ledger Font"),
+        url("./fonts/ledger/ledger-font.ttf") format("truetype");
 }
 
 html, body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     background-color: rgb(15,46,83);
     color: rgb(244,176,4);
     height: 100%;
 }
 
 .material-icons {
-    font-family: 'Material Icons';
+    font-family: "Material Icons";
     font-weight: normal;
     font-style: normal;
     font-size: 21px !important;
@@ -55,7 +42,7 @@ html, body {
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;
-    font-feature-settings: 'liga';
+    font-feature-settings: "liga";
     vertical-align: text-bottom;
     padding-right: 10px;
 }
