Adjust styles and theme

--- a/src/components/Account/index.css
+++ b/src/components/Account/index.css
@@ -1,9 +1,6 @@
 .account-title { font-size: 1rem; }
 
-.account-subtitle {
-    font-size: 0.8rem !important;
-    color: rgba(244,176,4,0.75) !important;
-}
+.account-subtitle { font-size: 0.8rem; }
 
 .gravatar {
     padding-top: 20px;
