Adjust font weights

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -55,12 +55,12 @@ div.p-b-small-block::after {
 
 .nano {
     font-size: 8px;
-    font-weight: 100;
+    font-weight: 400;
 }
 
 .tiny {
-    font-size: 10px;
-    font-weight: 100;
+    font-size: 0.625rem;
+    font-weight: 400;
 }
 
 .small {
