--- a/src/components/Account/index.css
+++ b/src/components/Account/index.css
@@ -36,8 +36,25 @@
     text-align: center;
 }
 
-
 .tab-content-headline {
     font-size: 1.5rem;
     font-weight: 400;
+}
+
+.bg-green {
+    display: inline-block;
+    background-color: rgba(34,139,34,0.55);
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 0.8rem;
+    line-height: 1rem;
+    padding: 2px 6px;
+    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
+    border-radius: 3px;
+    font-weight: bold;
+    margin: 5px 0px;
 }
