--- a/src/components/Bank/BankDrawer.css
+++ b/src/components/Bank/BankDrawer.css
@@ -1,15 +1,6 @@
-.navbar {
-    background-color: #F4B004 !important;
-    z-index: 10001;
-}
+.menu-item { color: rgba(244, 176, 4, 0.5); }
 
-.navbar h1 { color: #0F2E53 !important; }
-
-.navbar svg { fill: rgba(15,46,83,0.45) !important; }
-
-.menu-item { color: rgba(244,176,4,0.5); }
-
-.menu-item:hover { background-color: rgba(244,176,4,0.15); }
+.menu-item:hover { background-color: rgba(244, 176, 4, 0.15); }
 
 .menu-item {
     display: block;
