--- a/src/components/Bank/BankAppBarTitle.css
+++ b/src/components/Bank/BankAppBarTitle.css
@@ -33,7 +33,7 @@ div.badge {
     border-radius: 3px;
 }
 
-div.badge-error, div.badge-success {
+div.badge-error, div.badge-success, div.badge-primary {
     -webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, 0.4);
     -moz-box-shadow: 0 2px 7px rgba(0, 0, 0, 0.4);
     box-shadow: 0 2px 7px rgba(0, 0, 0, 0.4);
@@ -50,3 +50,5 @@ div.badge-error, div.badge-success {
 div.badge-error { background-color: rgba(178, 34, 34, 1.0); }
 
 div.badge-success { background-color: rgba(27, 94, 32, 1.0); }
+
+div.badge-primary { background-color: rgba(15, 46, 83, 0.75); }
