--- a/src/components/Panel/index.css
+++ b/src/components/Panel/index.css
@@ -1,12 +1,12 @@
 article.message {
-    border: 1px solid rgba(244,176,4,0.8);
+    border: 1px solid rgba(244, 176, 4, 1.0);
     border-radius: 3px;
     display: flex;
     flex-direction: column;
 }
 
 div.message-header {
-    background-color: rgba(244,176,4,0.85);
+    background-color: rgba(244, 176, 4, 1.0);
 }
 
 div.message-header p {
@@ -14,7 +14,7 @@ div.message-header p {
     margin-bottom: 3px;
     margin-left: 15px;
     margin-right: 5px;
-    color: rgba(15,46,83,0.9);
+    color: rgba(15, 46, 83, 1.0);
     font-size: 1.1rem;
 }
 
