--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -1,9 +1,9 @@
 .faded-image.cash {
     position: relative;
     overflow: hidden;
-    border-top: 1px solid rgba(244,176,4,0.2);
-    border-bottom: 1px solid rgba(244,176,4,0.2);
-    background-color: rgba(244,176,4,0.2);
+    border-top: 1px solid rgba(244, 176, 4, 0.2);
+    border-bottom: 1px solid rgba(244, 176, 4, 0.2);
+    background-color: rgba(244, 176, 4, 0.2);
     opacity: 1;
 }
 
@@ -27,7 +27,7 @@
 
 .faded-image.cash:hover {
     transition: background-color 1s ease-in-out;
-    background-color: rgba(244,176,4,0.2);
+    background-color: rgba(244, 176, 4, 0.2);
 }
 
 .faded-image.cash:not(:hover) {
@@ -40,7 +40,7 @@
     font-size: 2rem;
     padding: 1rem;
     position: relative;
-    text-shadow: 0px 0px 5px rgb(15,46,83);
+    text-shadow: 0px 0px 5px rgb(15, 46, 83);
 }
 
 .mui-text-input { margin-top: -0.8rem; }
@@ -50,7 +50,7 @@
 .subtitle {
     padding-top: 5px;
     padding-bottom: 1rem;
-    color: rgb(212,228,188);
+    color: rgb(212, 228, 188);
     font-size: 1.1rem;
 }
 
@@ -72,7 +72,7 @@
 
 .col-item {
     font-size: 1rem;
-    color: rgb(212,228,188);
+    color: rgb(212, 228, 188);
     text-align: left;
     padding-top: 0.2rem;
     padding-bottom: 0.2rem;
@@ -81,29 +81,6 @@
 .panel-logo { margin-bottom: 20px; }
 
 .navy {
-    color: rgb(15,46,83);
+    color: rgb(15, 46, 83);
     font-size: 1.2rem;
-}
-
-.welcome-panel-left {
-    display: flex;
-    width: 48%;
-    margin: 0px 5px 0px 5px;
-    padding-top: 1rem;
-    padding-left: 1rem;
-}
-
-.welcome-panel-center {
-    display: flex;
-    width: 48%;
-    margin: 0px 5px 0px 5px;
-    padding-top: 1rem;
-}
-
-.welcome-panel-right {
-    display: flex;
-    width: 48%;
-    margin: 0px 5px 0px 5px;
-    padding-top: 1rem;
-    padding-right: 1rem;
 }
