<Welcome>: visual restyle.

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -1,6 +1,7 @@
 /* --------- paddings / margins --------- */
 
 .p-b { padding-bottom: 1rem; }
+
 .p-b:last-child { padding-bottom: 0rem; }
 
 .p-b-small { padding-bottom: 5px; }
@@ -136,6 +137,7 @@ strong { color: rgb(212, 228, 188); }
 .transparent { opacity: 0; }
 
 .text-primary { color: rgb(15, 46, 83) !important; }
+
 .text-secondary { color: rgb(244, 176, 4) !important; }
 
 /* --------- links / colors --------- */
@@ -235,6 +237,8 @@ strong { color: rgb(212, 228, 188); }
 
 .center { justify-content: center; }
 
+.blockcenter { margin: 0 auto; }
+
 .space-between { justify-content: space-between; }
 
 .space-around { justify-content: space-around; }
@@ -248,9 +252,7 @@ strong { color: rgb(212, 228, 188); }
 
 /* --------- misc --------- */
 
-.cursor-pointer {
-    cursor: pointer;
-}
+.cursor-pointer { cursor: pointer; }
 
 span.red-badge {
     display: inline-block;
