--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -8,7 +8,7 @@
 }
 
 .faded-image.cash:before {
-    content: ' ';
+    content: " ";
     position: absolute;
     left: 0;
     top: 0;
@@ -39,11 +39,16 @@
     text-align: center;
     font-size: 2rem;
     padding: 1rem;
+    margin-bottom: 2px;
     position: relative;
     text-shadow: 0px 0px 5px rgb(15, 46, 83);
 }
 
-.hero .title { font-size: 2.5rem; }
+.hero .title {
+    font-size: 2.5rem;
+    color: rgb(255, 199, 59);
+    text-shadow: 0px 0px 7px rgba(0, 0, 0, 0.8);
+}
 
 .mui-text-input { margin-top: -0.8rem; }
 
@@ -77,16 +82,19 @@
 }
 
 .col-header {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    font-size: 1.4rem;
+    margin-top: 0.6em;
+    margin-bottom: 0.2em;
+    color: rgb(255, 199, 59);
+    text-shadow: 0px 0px 7px rgba(0, 0, 0, 0.8);
 }
 
 .col-item {
     font-size: 1rem;
     color: rgb(212, 228, 188);
     text-align: left;
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
+    line-height: 2rem;
+    vertical-align: middle;
 }
 
 .panel-logo-container {
@@ -107,4 +115,12 @@
 .navy {
     color: rgb(15, 46, 83);
     font-size: 1.2rem;
+}
+
+.heading-svg-icon {
+    fill: rgb(248, 255, 237) !important;
+    margin-left: 16px;
+    margin-right: 10px;
+    margin-bottom: -0.3rem;
+    filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.8));
 }
