--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -5,6 +5,8 @@
     border-bottom: 1px solid rgba(244, 176, 4, 0.2);
     background-color: rgba(244, 176, 4, 0.2);
     opacity: 1;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 .faded-image.cash:before {
@@ -70,6 +72,8 @@
 
 .title-small {
     margin-bottom: 16px;
+    line-height: 1.4em;
+    vertical-align: middle;
 }
 
 .columns {
@@ -101,8 +105,8 @@
 }
 
 .panel-logo-container {
-    height: 48px;
-    line-height: 48px;
+    height: 72px;
+    line-height: 72px;
     text-align: center;
     overflow: hidden;
     margin-bottom: 16px;
@@ -113,7 +117,10 @@
     vertical-align: middle;
 }
 
-.img-logo { display: block; }
+.img-logo {
+    display: block;
+    filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.6));
+}
 
 .navy {
     color: rgb(15, 46, 83);
