--- a/src/components/Welcome/index.css
+++ b/src/components/Welcome/index.css
@@ -134,3 +134,29 @@
     margin-bottom: -0.3rem;
     filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.8));
 }
+
+
+.svg-icon {
+    filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.8));
+}
+
+.svg-success {
+    fill: rgb(103,160,105) !important;
+}
+
+.svg-error {
+    fill: rgb(185,54,54) !important;
+}
+
+.svg-warning {
+    fill: rgb(246, 190, 49) !important;
+}
+
+.svg-margin {
+    margin-right: 0.5rem;
+    margin-top: -0.3rem;
+}
+
+.svg-tiny {
+    height: 21px !important;
+}
