Add small margin left class

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -50,6 +50,8 @@ div.p-b-small-block::after {
 
 .m-b-small { margin-bottom: 3px; }
 
+.m-l-small { margin-left: 3px; }
+
 /* --------- paddings / margins --------- */
 
 
