--- a/src/components/Account/index.css
+++ b/src/components/Account/index.css
@@ -69,3 +69,18 @@
     border-radius: 3px;
     padding: 1rem;
 }
+
+.paper {
+    background-color: #f5b71a;
+    padding: 2px 6px;
+    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
+    border-radius: 3px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+}
