--- a/src/components/Account/index.css
+++ b/src/components/Account/index.css
@@ -72,7 +72,7 @@
 
 .paper {
     background-color: #f5b71a;
-    padding: 2px 6px;
+    padding: 1.1rem;
     -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
     -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.4);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
@@ -83,4 +83,8 @@
     margin-top: 15px;
     margin-bottom: 5px;
     margin-right: 15px;
+}
+
+.compact {
+    line-height: 0.95rem !important;
 }
