--- a/src/components/CheckOutForm/index.css
+++ b/src/components/CheckOutForm/index.css
@@ -1,7 +1,7 @@
 .stripe-checkout {
-    padding: 1rem;
-    max-width: 50%;
-    min-width: 50%;
+    padding-right: 1rem;
+    max-width: 450px;
+    min-width: 450px;
 }
 
 .StripeElement {
@@ -10,7 +10,7 @@
     height: 40px;
     padding: 10px 12px;
     border-radius: 3px;
-    border: 1px solid rgb(246, 190, 49);
+    border: 1px solid rgba(15, 46, 83, 0.3);
     -webkit-transition: box-shadow 150ms ease;
     transition: box-shadow 150ms ease;
 }
