--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -303,6 +303,18 @@ div.badge-success { background-color: rgba(27, 94, 32, 1.0); }
 
 div.badge-primary { background-color: rgba(15, 46, 83, 0.75); }
 
+.badge-pending {
+    background-color: rgba(15, 46, 83, 0.75);
+    -webkit-box-shadow: 0 2px 7px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0 2px 7px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 2px 7px rgba(0, 0, 0, 0.4);
+    color: rgba(255, 255, 255, 0.8);
+    padding: 3px 5px 3px 5px;
+    border-radius: 3px;
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+
 span.red-badge {
     display: inline-block;
     font-size: 0.7rem;
