--- a/src/components/StellarFox/index.css
+++ b/src/components/StellarFox/index.css
@@ -47,3 +47,38 @@ html, body {
 a:focus {
     outline: none;
 }
+
+
+.flex-box-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-box-col {
+    display: flex;
+    flex-direction: column;
+}
+
+.items-flex-start {
+    align-items: flex-start;
+}
+
+.items-flex-end {
+    align-items: flex-end;
+}
+
+.items-centered {
+    align-items: center;
+}
+
+.content-flex-end {
+    justify-content: flex-end;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.space-around {
+    justify-content: space-around;
+}
