--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -32,6 +32,8 @@ div.p-b-small-block::after {
 
 .p-l { padding-left: 1rem; }
 
+.p-l-large { padding-left: 3rem; }
+
 .p-l-small { padding-left: 5px; }
 
 .p-r { padding-right: 1rem; }
