Adjust margin helper

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -50,7 +50,7 @@ div.p-b-small-block::after {
 
 .m-t-x-large {margin-top: 5rem; }
 
-.m-b-large { margin-bottom: 1.35rem; }
+.m-b-large { margin-bottom: 22px; }
 
 .m-b { margin-bottom: 1rem; }
 
