--- a/src/components/Balances/index.css
+++ b/src/components/Balances/index.css
@@ -95,6 +95,25 @@
     border-radius: 3px;
 }
 
+.paycheck {
+    background-color: #eceff1 !important;
+    background-image: linear-gradient(90deg, rgba(255,255,255,.07) 81%, transparent 25%),
+        linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 41%),
+        linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 61%),
+        linear-gradient(90deg, transparent 50%, rgba(255,255,255,.19) 50%);
+    background-size: 12px, 29px, 22px, 90px;
+}
+
+.lace {
+    background-image:
+		linear-gradient(to right bottom, rgba(255,255,255,0) 9px, rgba(15, 46, 83, 0.3) 10px, rgba(255,255,255,0) 11px),
+		linear-gradient(to left bottom, rgba(255,255,255,0) 9px, rgba(15, 46, 83, 0.3) 10px, rgba(255,255,255,0) 11px),
+		radial-gradient(circle at 6px 0, rgba(255,255,255,0) 5px, rgba(15, 46, 83, 0.3) 6px, rgba(255,255,255,0) 7px);
+	background-repeat: repeat-x;
+	background-size: 12px 10px, 12px 10px, 12px 11px;
+	background-position: 0 0, 0 0, 0 10px;
+}
+
 .leading-label-align {
     padding-top: 42px;
     padding-bottom: 50px;
