<Profile>: Disable email input

--- a/src/lib/common/Input/index.css
+++ b/src/lib/common/Input/index.css
@@ -84,6 +84,9 @@
     background: rgba(15, 46, 83, 1.0);
 }
 
+.lcars-input input:disabled {
+    opacity: 0.4
+}
 
 /* ========================================================================= */
 
