--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -392,4 +392,8 @@ span.red-badge {
     min-height: 11px;
 }
 
+.no-margin {
+    margin-bottom: -10px !important;
+}
+
 /* --------- misc --------- */
