--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -338,6 +338,22 @@ span.red-badge {
     font-weight: bold;
 }
 
+.you-badge::after {
+    content: "YOU";
+    background-color: rgba(178, 34, 34, 0.8);
+    color: rgba(255, 255, 255, 0.9);
+    position: relative;
+    left: 1px;
+    top: -11px;
+    font-size: 9px;
+    padding-top: 2px;
+    padding-bottom: 1px;
+    padding-left: 2px;
+    padding-right: 3px;
+    border-radius: 3px;
+    opacity: 0.8
+}
+
 /* --------- badges --------- */
 
 
