--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -341,6 +341,7 @@ span.red-badge {
 .you-badge::after {
     content: "YOU";
     background-color: rgba(178, 34, 34, 0.8);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
     color: rgba(255, 255, 255, 0.9);
     position: relative;
     left: 1px;
@@ -348,7 +349,7 @@ span.red-badge {
     font-size: 9px;
     padding-top: 2px;
     padding-bottom: 1px;
-    padding-left: 2px;
+    padding-left: 3px;
     padding-right: 3px;
     border-radius: 3px;
     opacity: 0.8
